Corrige limpeza de console para Linux e Unix